--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 
 Sequence Models/week2/1_Operations_on_word_vectors_v2a/data/glove.6B.50d.txt
+Sequence Models/week2/2_Emoji_v3a/data/glove.6B.50d.txt
