C4_W1_Ungraded_Lab_1_Basic_Attention.ipynb

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ Sequence Models/week4/ungrade/2_Transformer_application_Named_Entity_Recognition
 Sequence Models/week4/ungrade/3_QA_dataset/model/tensorflow/._tf_model.h5
 Sequence Models/week4/ungrade/3_QA_dataset/model/tensorflow/tf_model.h5
 Sequence Models/week4/ungrade/3_QA_dataset/model/pytorch/pytorch_model.bin
+.DS_Store
+Attention Models/.DS_Store
+Attention Models/week1/.DS_Store
+Attention Models/week1/ungrade/.DS_Store
+.DS_Store
