--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@ Attention Models/.DS_Store
 Attention Models/week1/.DS_Store
 Attention Models/week1/ungrade/.DS_Store
 .DS_Store
+Attention Models/week1/1.Neural Machine Translation/data/opus/medical/0.1.0/opus-train.tfrecord-00000-of-00002
+Attention Models/week1/1.Neural Machine Translation/data/opus/medical/0.1.0/opus-train.tfrecord-00001-of-00002
+Attention Models/week1/1.Neural Machine Translation/output_dir/model.pkl.gz
+Attention Models/week1/1.Neural Machine Translation/output_dir/model.opt_slots0.npy.gz
+Attention Models/week1/1.Neural Machine Translation/output_dir/model.weights.npy.gz
+Attention Models/week1/1.Neural Machine Translation/model.pkl.gz
