--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ Attention Models/week1/1.Neural Machine Translation/output_dir/model.pkl.gz
 Attention Models/week1/1.Neural Machine Translation/output_dir/model.opt_slots0.npy.gz
 Attention Models/week1/1.Neural Machine Translation/output_dir/model.weights.npy.gz
 Attention Models/week1/1.Neural Machine Translation/model.pkl.gz
+Attention Models/week2/1.Transformer Summarizer/model.weights.npy.gz
