--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ Attention Models/week1/1.Neural Machine Translation/model.pkl.gz
 Attention Models/week2/1.Transformer Summarizer/model.weights.npy.gz
 Attention Models/week3/1.Question Answering/model_squad.pkl.gz
 Attention Models/week3/1.Question Answering/model.pkl.gz
+Attention Models/week4/Chatbot/chatbot_model1.pkl.gz
+Attention Models/week4/Chatbot/model/model.opt_slots0.npy.gz
+Attention Models/week4/Chatbot/model/model.weights.npy.gz
+Attention Models/week4/Chatbot/data/data.json
